fix horizontal scroll when responsive

--- a/bai5/styles.css
+++ b/bai5/styles.css
@@ -7,20 +7,19 @@ input:focus::placeholder {
 }
 
 .container {
-  width: 100vw;
+  width: auto;
   height: 100vh;
 }
 .wrapper {
-  width: 100%;
-  min-height: 100%;
+  width: auto;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   background: linear-gradient(-135deg, #c850c0, #4158d0);
-  /* padding: 15px 0 15px 0; */
 }
 .form--container {
-  width: 960px;
+  width: 70%;
   height: 680px;
   flex-wrap: wrap;
   background-color: white;
@@ -151,12 +150,18 @@ a:active {
 
 /* Extra large devices (large desktops, 1200px and up) */
 @media (max-width: 1199.98px) {
+  .wrapper {
+    padding: 15px 0 15px 0;
+  }
+  .form--container{
+    /* width: 80%; */
+  }
 }
 
 /* Large devices (desktops, 992px and up) */
 @media (max-width: 991.98px) {
   .wrapper {
-    padding: 15px 15px 15px 15px;
+    padding: 0 15px 0 15px;
   }
   .form--left img {
     width: 60%;
